--- a/5.7/Dockerfile
+++ b/5.7/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:5.7
 
-RUN apt-get update && apt-get install -y python2.7 --no-install-recommends && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y python2.7 python-mysqldb --no-install-recommends && rm -rf /var/lib/apt/lists/*
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python2.7 10
